<resources>
    <string name="app_name">RECLANCER</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_mobile_hint">Mobile</string>
    <string name="cnfm_password_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string name="hello_world">Hello world!</string>


    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->


    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="state_prompt">Choose a state</string>
    <string name="city_prompt">Choose a City</string>
    <string name="work_type">Choose Work Type</string>
    <string name="gender_prompt">Choose Gender</string>
    <string name="cat_prompt">Choose Category</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="dummy_data" >
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>

    </string-array>


    <string name="title_activity_search_result">searchResult</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>




</resources>
