<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo"
            android:scaleType="fitCenter" />



        <!--<android.support.design.widget.TextInputLayout-->
        <!--style="@style/parent"-->
        <!--android:layout_marginTop="@dimen/signup_text_margin_top">-->

        <!--<EditText-->
        <!--style="@style/modifiedEditText"-->
        <!--android:hint="Name"-->
        <!--android:inputType="text"-->
        <!--android:maxLines="1" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
        <!--style="@style/parent"-->
        <!--android:layout_marginTop="@dimen/signup_text_margin_top">-->

        <!--<EditText-->
        <!--style="@style/modifiedEditText"-->
        <!--android:hint="Mobile Number"-->
        <!--android:inputType="text"-->
        <!--android:maxLines="1" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/remail"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/rpass"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/login"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="LOGIN"
            android:onClick="login"/>

        <!--<Button
            android:id="@+id/m_login"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Login Through Mobile Number"
            android:onClick="m_login"/>-->


        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <TextView

            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Reset Password"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:onClick="Resetpassword"/>


    </LinearLayout>
</android.support.v7.widget.CardView>
