<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context="com.mythri.reclancer_app.Freelancer.RSearch">

    <ScrollView style="@style/parent">

        <RelativeLayout style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="Job Search" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    style="@style/loginCard"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor"
                    android:elevation="5dp"
                    app:cardCornerRadius="@dimen/loginCardRadius">

                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/category"
                                style="@style/parent"
                                android:layout_height="64dp"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                android:background="@drawable/bg_dropdown"
                                android:prompt="@string/cat_prompt"


                                android:textAlignment="viewStart"
                                android:theme="@style/spinnerText">

                            </android.support.v7.widget.AppCompatSpinner>


                        <android.support.design.widget.TextInputLayout
                            style="@style/parent"
                            android:layout_marginTop="@dimen/signup_text_margin_top">

                            <EditText
                                android:id="@+id/skills"
                                style="@style/modifiedEditText"
                                android:hint="Specialized Skills"
                                android:inputType="text"
                                android:maxLines="1" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/state"
                            style="@style/parent"
                            android:layout_height="64dp"
                            android:layout_marginTop="@dimen/signup_text_margin_top"
                            android:background="@drawable/bg_dropdown"
                            android:prompt="@string/state_prompt"
                            android:textAlignment="viewStart"
                            android:theme="@style/spinnerText">

                        </android.support.v7.widget.AppCompatSpinner>




                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/worktype"
                            style="@style/parent"
                            android:layout_height="64dp"
                            android:layout_marginTop="@dimen/signup_text_margin_top"
                            android:background="@drawable/bg_dropdown"
                            android:prompt="@string/work_type"

                            android:textAlignment="viewStart"
                            android:theme="@style/spinnerText">

                        </android.support.v7.widget.AppCompatSpinner>



                        <Button
                            android:id="@+id/fsearch"
                            style="@style/loginButton"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:text="SEARCH"
                            android:onClick="senddata"
                            />



                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:src="@android:drawable/ic_dialog_dialer"
                android:onClick="ShowMenu"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>


