<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context=".Recruiter.FResult">

    <RelativeLayout
        style="@style/parent">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:weightSum="12">

            <LinearLayout
                style="@style/parent"
                android:background="@drawable/login_shape_bk"
                android:orientation="vertical"
                android:layout_weight="3">

                <ImageView
                    style="@style/parent"
                    android:background="@drawable/ic_login_bk"
                    android:contentDescription="login background" />

            </LinearLayout>

        </LinearLayout>

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Manage Jobs"
            android:textColor="#fff"
            android:textStyle="bold"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                style="@style/headerText"
                android:layout_gravity="center"
                android:text="Freelancer Search Result" />

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout android:id="@+id/layout_to_hide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <android.support.v7.widget.CardView
                        style="@style/loginCard"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:id="@+id/cardview"
                        android:background="@color/whiteCardColor"
                        android:elevation="5dp"

                        app:cardCornerRadius="@dimen/loginCardRadius">

                        <LinearLayout
                            style="@style/linearParent"
                            android:layout_gravity="center"
                            android:padding="@dimen/loginViewsMargin">

                            <TextView
                                style="@style/SearchText"
                                android:layout_gravity="center"
                                android:text="Advanced Search"></TextView>

                            <!--<TextView

                                style="@style/SearchApplied"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:text="- One" />
                            <TextView
                                style="@style/SearchApplied"
                                android:layout_gravity="center"
                                android:text="- Two" />
                            <TextView
                                style="@style/SearchApplied"
                                android:layout_gravity="center"
                                android:text="- Three" />
                            <TextView
                                style="@style/SearchApplied"
                                android:layout_gravity="center"
                                android:text="- Four" />
                            <TextView
                                style="@style/SearchApplied"
                                android:layout_gravity="center"
                                android:text="- Five" />-->
                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/category"
                                style="@style/parent"
                                android:layout_height="64dp"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                android:background="@drawable/bg_dropdown"
                                android:prompt="@string/cat_prompt"


                                android:textAlignment="viewStart"
                                android:theme="@style/spinnerText">

                            </android.support.v7.widget.AppCompatSpinner>


                            <android.support.design.widget.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">

                                <EditText
                                    android:id="@+id/pskills"
                                    style="@style/modifiedEditText"
                                    android:hint="Enter Primary Skills"

                                    android:maxLines="1" />
                            </android.support.design.widget.TextInputLayout>


                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/state"
                                style="@style/parent"
                                android:layout_height="64dp"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                android:background="@drawable/bg_dropdown"
                                android:prompt="@string/state_prompt"
                                android:textAlignment="viewStart"
                                android:theme="@style/spinnerText">

                            </android.support.v7.widget.AppCompatSpinner>


                            <android.support.v7.widget.AppCompatSpinner
                                android:id="@+id/worktype"
                                style="@style/parent"
                                android:layout_height="64dp"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                android:background="@drawable/bg_dropdown"
                                android:prompt="@string/work_type"


                                android:textAlignment="viewStart"
                                android:theme="@style/spinnerText">

                            </android.support.v7.widget.AppCompatSpinner>

                            <Button
                                android:id="@+id/filter"
                                style="@style/loginButton"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:text="APPLY" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </FrameLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:src="@android:drawable/ic_dialog_dialer"
            />-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="370dp"
            android:layout_marginTop="21dp"
            android:id="@+id/myImageId"
            android:layout_marginRight="-10dp"
            android:src="@android:drawable/ic_menu_sort_by_size" />

    </RelativeLayout>


</LinearLayout>


